# linux-recognition

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  pytest.ini
linux_recognition/: configuration.py  context.py  initialization.py  log_management.py  normalization.py  recognition.py  software.py  synchronization.py
linux_recognition/aitools/: resolving.py
linux_recognition/config/: config.yaml
linux_recognition/data/: predefined.py
linux_recognition/db/: rendering.py
linux_recognition/db/postgresql/: alpine.py  core.py  cpe.py  licenses.py  output.py  repology.py  udd.py
linux_recognition/db/sql/postgresql/: packages_create_alpine_packages.sql  packages_create_cpe_entities.sql  packages_create_index_on_cpe_entities.sql  packages_create_licenses.sql  packages_get_cpe_entities.sql  packages_get_license.sql  packages_get_license_identifier.sql  packages_get_package_info.sql  packages_insert_alpine_packages.sql  packages_insert_cpe_entities.sql  packages_insert_licenses.sql  recognized_create_software_info.sql  recognized_get_fingerprint.sql  recognized_insert_software_info.sql  repology_create_indexes_on_packages_info.sql  repology_create_links_ids.sql  repology_create_package_urls.sql  repology_create_packages_info.sql  (+17 more)
linux_recognition/reposcan/: dateparse.py  packages.py  projects.py  projects_base.py  spec.py
linux_recognition/typestore/: datatypes.py  errors.py
linux_recognition/webtools/: content.py  download.py  response.py  session.py
tests/: conftest.py  sample.py  test_context.py  test_packages.py  test_projects.py
