[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "linux-recognition"
version = "0.1.2"
dependencies = [
  "aiofile >= 3.9.0",
  "aiohttp >= 3.11.18",
  "aiosqlite >= 0.21.0",
  "anyio >= 4.9.0",
  "asyncpg >= 0.30.0",
  "beautifulsoup4 >= 4.13.4",
  "defusedxml >= 0.7.1",
  "faiss-cpu >= 1.11.0",
  "html2text >= 2025.4.15",
  "json_log_formatter >= 1.1.1",
  "langchain_community >= 0.3.23",
  "langchain_core >= 0.3.58",
  "langchain_openai >= 0.3.16",
  "lxml >= 5.4.0",
  "pydantic >= 2.11.4",
  "pydantic_settings >= 2.9.1",
  "yarl >= 1.20.0",
]
requires-python = ">=3.13"
authors = [
  {name = "auxacc1"},
]
maintainers = [
  {name = "auxacc1"},
]
description = "Recognition of Linux Packages"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
keywords = ["linux package", "recognition", "metadata", "data acquisition"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.5",
  "pytest_asyncio>=0.26.0"
]

[project.urls]
Homepage = "https://github.com/auxacc1/linux-recognition"
Repository = "https://github.com/auxacc1/linux-recognition"

[project.scripts]
linux_recognition_initialize = "linux_recognition.initialization:initialize"

[tool.hatch.build]
include = ["linux_recognition", "linux_recognition.*"]
